// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImageTest it should display the product title 1`] = `
<div
  className="productCard customclass"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImageTest should be show the productImage correctly 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="coffee.png"
/>
`;
